feat init 初步生成文档
