# examples/blog/api/auth/login.pb.go
@@ -12,6 +12,7 @@ import (
 	_ "google.golang.org/genproto/googleapis/api/annotations"
 	protoreflect "google.golang.org/protobuf/reflect/protoreflect"
 	protoimpl "google.golang.org/protobuf/runtime/protoimpl"
+	timestamppb "google.golang.org/protobuf/types/known/timestamppb"
 	reflect "reflect"
 	sync "sync"
 )
@@ -82,6 +83,10 @@ type GetTokenReply struct {
 	state         protoimpl.MessageState
 	sizeCache     protoimpl.SizeCache
 	unknownFields protoimpl.UnknownFields
+
+	Token     string                 `protobuf:"bytes,1,opt,name=token,proto3" json:"token,omitempty"`
+	TokenType string                 `protobuf:"bytes,2,opt,name=tokenType,proto3" json:"tokenType,omitempty"`
+	ExpiresAt *timestamppb.Timestamp `protobuf:"bytes,3,opt,name=expiresAt,proto3" json:"expiresAt,omitempty"`
 }
 
 func (x *GetTokenReply) Reset() {
@@ -116,6 +121,27 @@ func (*GetTokenReply) Descriptor() ([]byte, []int) {
 	return file_auth_login_proto_rawDescGZIP(), []int{1}
 }
 
+func (x *GetTokenReply) GetToken() string {
+	if x != nil {
+		return x.Token
+	}
+	return ""
+}
+
+func (x *GetTokenReply) GetTokenType() string {
+	if x != nil {
+		return x.TokenType
+	}
+	return ""
+}
+
+func (x *GetTokenReply) GetExpiresAt() *timestamppb.Timestamp {
+	if x != nil {
+		return x.ExpiresAt
+	}
+	return nil
+}
+
 var File_auth_login_proto protoreflect.FileDescriptor
 
 var file_auth_login_proto_rawDesc = []byte{
@@ -127,28 +153,42 @@ var file_auth_login_proto_rawDesc = []byte{
 	0x2f, 0x6f, 0x70, 0x74, 0x69, 0x6f, 0x6e, 0x73, 0x2f, 0x61, 0x6e, 0x6e, 0x6f, 0x74, 0x61, 0x74,
 	0x69, 0x6f, 0x6e, 0x73, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x1a, 0x17, 0x76, 0x61, 0x6c, 0x69,
 	0x64, 0x61, 0x74, 0x65, 0x2f, 0x76, 0x61, 0x6c, 0x69, 0x64, 0x61, 0x74, 0x65, 0x2e, 0x70, 0x72,
-	0x6f, 0x74, 0x6f, 0x22, 0x6c, 0x0a, 0x0f, 0x47, 0x65, 0x74, 0x54, 0x6f, 0x6b, 0x65, 0x6e, 0x52,
-	0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x12, 0x3d, 0x0a, 0x08, 0x75, 0x73, 0x65, 0x72, 0x6e, 0x61,
-	0x6d, 0x65, 0x18, 0x01, 0x20, 0x01, 0x28, 0x09, 0x42, 0x21, 0x92, 0x41, 0x14, 0x32, 0x12, 0xe7,
-	0x99, 0xbb, 0xe9, 0x99, 0x86, 0xe7, 0x94, 0xa8, 0xe6, 0x88, 0xb7, 0xe5, 0x90, 0x8d, 0xe7, 0xa7,
-	0xb0, 0xfa, 0x42, 0x07, 0x72, 0x05, 0x20, 0x02, 0x28, 0x80, 0x01, 0x52, 0x08, 0x75, 0x73, 0x65,
-	0x72, 0x6e, 0x61, 0x6d, 0x65, 0x12, 0x1a, 0x0a, 0x08, 0x70, 0x61, 0x73, 0x73, 0x77, 0x6f, 0x72,
-	0x64, 0x18, 0x02, 0x20, 0x01, 0x28, 0x09, 0x52, 0x08, 0x70, 0x61, 0x73, 0x73, 0x77, 0x6f, 0x72,
-	0x64, 0x22, 0x0f, 0x0a, 0x0d, 0x47, 0x65, 0x74, 0x54, 0x6f, 0x6b, 0x65, 0x6e, 0x52, 0x65, 0x70,
-	0x6c, 0x79, 0x32, 0x81, 0x01, 0x0a, 0x05, 0x4c, 0x6f, 0x67, 0x69, 0x6e, 0x12, 0x78, 0x0a, 0x08,
-	0x47, 0x65, 0x74, 0x54, 0x6f, 0x6b, 0x65, 0x6e, 0x12, 0x19, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x61,
-	0x75, 0x74, 0x68, 0x2e, 0x47, 0x65, 0x74, 0x54, 0x6f, 0x6b, 0x65, 0x6e, 0x52, 0x65, 0x71, 0x75,
-	0x65, 0x73, 0x74, 0x1a, 0x17, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x61, 0x75, 0x74, 0x68, 0x2e, 0x47,
-	0x65, 0x74, 0x54, 0x6f, 0x6b, 0x65, 0x6e, 0x52, 0x65, 0x70, 0x6c, 0x79, 0x22, 0x38, 0x82, 0xd3,
-	0xe4, 0x93, 0x02, 0x13, 0x22, 0x0e, 0x2f, 0x61, 0x75, 0x74, 0x68, 0x2f, 0x76, 0x31, 0x2f, 0x6c,
-	0x6f, 0x67, 0x69, 0x6e, 0x3a, 0x01, 0x2a, 0x92, 0x41, 0x1c, 0x0a, 0x0c, 0xe7, 0x99, 0xbb, 0xe9,
-	0x99, 0x86, 0xe7, 0xae, 0xa1, 0xe7, 0x90, 0x86, 0x12, 0x0c, 0xe7, 0x99, 0xbb, 0xe9, 0x99, 0x86,
-	0xe6, 0x8e, 0xa5, 0xe5, 0x8f, 0xa3, 0x42, 0x44, 0x0a, 0x08, 0x61, 0x70, 0x69, 0x2e, 0x61, 0x75,
-	0x74, 0x68, 0x50, 0x01, 0x5a, 0x36, 0x67, 0x69, 0x74, 0x68, 0x75, 0x62, 0x2e, 0x63, 0x6f, 0x6d,
-	0x2f, 0x63, 0x68, 0x69, 0x6e, 0x61, 0x2d, 0x78, 0x73, 0x2f, 0x67, 0x69, 0x6e, 0x2d, 0x74, 0x70,
-	0x6c, 0x2f, 0x65, 0x78, 0x61, 0x6d, 0x70, 0x6c, 0x65, 0x2f, 0x62, 0x6c, 0x6f, 0x67, 0x2f, 0x61,
-	0x70, 0x69, 0x2f, 0x61, 0x75, 0x74, 0x68, 0x3b, 0x61, 0x75, 0x74, 0x68, 0x62, 0x06, 0x70, 0x72,
-	0x6f, 0x74, 0x6f, 0x33,
+	0x6f, 0x74, 0x6f, 0x1a, 0x1f, 0x67, 0x6f, 0x6f, 0x67, 0x6c, 0x65, 0x2f, 0x70, 0x72, 0x6f, 0x74,
+	0x6f, 0x62, 0x75, 0x66, 0x2f, 0x74, 0x69, 0x6d, 0x65, 0x73, 0x74, 0x61, 0x6d, 0x70, 0x2e, 0x70,
+	0x72, 0x6f, 0x74, 0x6f, 0x22, 0x6c, 0x0a, 0x0f, 0x47, 0x65, 0x74, 0x54, 0x6f, 0x6b, 0x65, 0x6e,
+	0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x12, 0x3d, 0x0a, 0x08, 0x75, 0x73, 0x65, 0x72, 0x6e,
+	0x61, 0x6d, 0x65, 0x18, 0x01, 0x20, 0x01, 0x28, 0x09, 0x42, 0x21, 0x92, 0x41, 0x14, 0x32, 0x12,
+	0xe7, 0x99, 0xbb, 0xe9, 0x99, 0x86, 0xe7, 0x94, 0xa8, 0xe6, 0x88, 0xb7, 0xe5, 0x90, 0x8d, 0xe7,
+	0xa7, 0xb0, 0xfa, 0x42, 0x07, 0x72, 0x05, 0x20, 0x02, 0x28, 0x80, 0x01, 0x52, 0x08, 0x75, 0x73,
+	0x65, 0x72, 0x6e, 0x61, 0x6d, 0x65, 0x12, 0x1a, 0x0a, 0x08, 0x70, 0x61, 0x73, 0x73, 0x77, 0x6f,
+	0x72, 0x64, 0x18, 0x02, 0x20, 0x01, 0x28, 0x09, 0x52, 0x08, 0x70, 0x61, 0x73, 0x73, 0x77, 0x6f,
+	0x72, 0x64, 0x22, 0xcb, 0x01, 0x0a, 0x0d, 0x47, 0x65, 0x74, 0x54, 0x6f, 0x6b, 0x65, 0x6e, 0x52,
+	0x65, 0x70, 0x6c, 0x79, 0x12, 0x27, 0x0a, 0x05, 0x74, 0x6f, 0x6b, 0x65, 0x6e, 0x18, 0x01, 0x20,
+	0x01, 0x28, 0x09, 0x42, 0x11, 0x92, 0x41, 0x0e, 0x32, 0x0c, 0xe7, 0x94, 0xa8, 0xe6, 0x88, 0xb7,
+	0xe4, 0xbb, 0xa4, 0xe7, 0x89, 0x8c, 0x52, 0x05, 0x74, 0x6f, 0x6b, 0x65, 0x6e, 0x12, 0x3e, 0x0a,
+	0x09, 0x74, 0x6f, 0x6b, 0x65, 0x6e, 0x54, 0x79, 0x70, 0x65, 0x18, 0x02, 0x20, 0x01, 0x28, 0x09,
+	0x42, 0x20, 0x92, 0x41, 0x1d, 0x32, 0x1b, 0xe4, 0xbb, 0xa4, 0xe7, 0x89, 0x8c, 0xe7, 0xb1, 0xbb,
+	0xe5, 0x9e, 0x8b, 0x20, 0x64, 0x65, 0x66, 0x61, 0x75, 0x6c, 0x74, 0x3a, 0x42, 0x65, 0x61, 0x72,
+	0x65, 0x72, 0x52, 0x09, 0x74, 0x6f, 0x6b, 0x65, 0x6e, 0x54, 0x79, 0x70, 0x65, 0x12, 0x51, 0x0a,
+	0x09, 0x65, 0x78, 0x70, 0x69, 0x72, 0x65, 0x73, 0x41, 0x74, 0x18, 0x03, 0x20, 0x01, 0x28, 0x0b,
+	0x32, 0x1a, 0x2e, 0x67, 0x6f, 0x6f, 0x67, 0x6c, 0x65, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x62,
+	0x75, 0x66, 0x2e, 0x54, 0x69, 0x6d, 0x65, 0x73, 0x74, 0x61, 0x6d, 0x70, 0x42, 0x17, 0x92, 0x41,
+	0x14, 0x32, 0x12, 0xe4, 0xbb, 0xa4, 0xe7, 0x89, 0x8c, 0xe5, 0x88, 0xb0, 0xe6, 0x9c, 0x9f, 0xe6,
+	0x97, 0xb6, 0xe9, 0x97, 0xb4, 0x52, 0x09, 0x65, 0x78, 0x70, 0x69, 0x72, 0x65, 0x73, 0x41, 0x74,
+	0x32, 0x81, 0x01, 0x0a, 0x05, 0x4c, 0x6f, 0x67, 0x69, 0x6e, 0x12, 0x78, 0x0a, 0x08, 0x47, 0x65,
+	0x74, 0x54, 0x6f, 0x6b, 0x65, 0x6e, 0x12, 0x19, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x61, 0x75, 0x74,
+	0x68, 0x2e, 0x47, 0x65, 0x74, 0x54, 0x6f, 0x6b, 0x65, 0x6e, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73,
+	0x74, 0x1a, 0x17, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x61, 0x75, 0x74, 0x68, 0x2e, 0x47, 0x65, 0x74,
+	0x54, 0x6f, 0x6b, 0x65, 0x6e, 0x52, 0x65, 0x70, 0x6c, 0x79, 0x22, 0x38, 0x82, 0xd3, 0xe4, 0x93,
+	0x02, 0x13, 0x22, 0x0e, 0x2f, 0x61, 0x75, 0x74, 0x68, 0x2f, 0x76, 0x31, 0x2f, 0x6c, 0x6f, 0x67,
+	0x69, 0x6e, 0x3a, 0x01, 0x2a, 0x92, 0x41, 0x1c, 0x0a, 0x0c, 0xe7, 0x99, 0xbb, 0xe9, 0x99, 0x86,
+	0xe7, 0xae, 0xa1, 0xe7, 0x90, 0x86, 0x12, 0x0c, 0xe7, 0x99, 0xbb, 0xe9, 0x99, 0x86, 0xe6, 0x8e,
+	0xa5, 0xe5, 0x8f, 0xa3, 0x42, 0x44, 0x0a, 0x08, 0x61, 0x70, 0x69, 0x2e, 0x61, 0x75, 0x74, 0x68,
+	0x50, 0x01, 0x5a, 0x36, 0x67, 0x69, 0x74, 0x68, 0x75, 0x62, 0x2e, 0x63, 0x6f, 0x6d, 0x2f, 0x63,
+	0x68, 0x69, 0x6e, 0x61, 0x2d, 0x78, 0x73, 0x2f, 0x67, 0x69, 0x6e, 0x2d, 0x74, 0x70, 0x6c, 0x2f,
+	0x65, 0x78, 0x61, 0x6d, 0x70, 0x6c, 0x65, 0x2f, 0x62, 0x6c, 0x6f, 0x67, 0x2f, 0x61, 0x70, 0x69,
+	0x2f, 0x61, 0x75, 0x74, 0x68, 0x3b, 0x61, 0x75, 0x74, 0x68, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74,
+	0x6f, 0x33,
 }
 
 var (
@@ -165,17 +205,19 @@ func file_auth_login_proto_rawDescGZIP() []byte {
 
 var file_auth_login_proto_msgTypes = make([]protoimpl.MessageInfo, 2)
 var file_auth_login_proto_goTypes = []interface{}{
-	(*GetTokenRequest)(nil), // 0: api.auth.GetTokenRequest
-	(*GetTokenReply)(nil),   // 1: api.auth.GetTokenReply
+	(*GetTokenRequest)(nil),       // 0: api.auth.GetTokenRequest
+	(*GetTokenReply)(nil),         // 1: api.auth.GetTokenReply
+	(*timestamppb.Timestamp)(nil), // 2: google.protobuf.Timestamp
 }
 var file_auth_login_proto_depIdxs = []int32{
-	0, // 0: api.auth.Login.GetToken:input_type -> api.auth.GetTokenRequest
-	1, // 1: api.auth.Login.GetToken:output_type -> api.auth.GetTokenReply
-	1, // [1:2] is the sub-list for method output_type
-	0, // [0:1] is the sub-list for method input_type
-	0, // [0:0] is the sub-list for extension type_name
-	0, // [0:0] is the sub-list for extension extendee
-	0, // [0:0] is the sub-list for field type_name
+	2, // 0: api.auth.GetTokenReply.expiresAt:type_name -> google.protobuf.Timestamp
+	0, // 1: api.auth.Login.GetToken:input_type -> api.auth.GetTokenRequest
+	1, // 2: api.auth.Login.GetToken:output_type -> api.auth.GetTokenReply
+	2, // [2:3] is the sub-list for method output_type
+	1, // [1:2] is the sub-list for method input_type
+	1, // [1:1] is the sub-list for extension type_name
+	1, // [1:1] is the sub-list for extension extendee
+	0, // [0:1] is the sub-list for field type_name
 }
 
 func init() { file_auth_login_proto_init() }
